# json2cbor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/json2cbor/: json2cbor.h
src/: json2cbor.c
